<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.example</groupId>
    <artifactId>demo</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <name>demo</name>
    <description>demo</description>

    <modules>
        <module>B</module>
        <module>C</module>
    </modules>
    <packaging>pom</packaging>

    <properties>
        <java.version>11</java.version>
        <maven-surefire-plugin>6</maven-surefire-plugin>
        <maven.compiler.source>6</maven.compiler.source>
        <maven.compiler.target>1.6</maven.compiler.target>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-starter</artifactId>
                <version>2.7.0</version>
            </dependency>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-starter</artifactId>
                <version>2.7.0</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter</artifactId>
            <version>2.7.0</version>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <version>2.7.0</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-starter-test</artifactId>
                    <version>2.7.0</version>
                </plugin>
                <plugin>

                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-starter</artifactId>
                    <version>2.7.0</version>
                </plugin>
                <plugin>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>exec-maven-plugin</artifactId>
                    <version>1.5.0</version>
                </plugin>
                <plugin>
                    <groupId>org.jacoco</groupId>
                    <artifactId>jacoco-maven-plugin</artifactId>
                    <version>0.8.7</version>
                </plugin>
                <plugin>
                    <groupId>com.github.surpsg</groupId>
                    <artifactId>diff-coverage-maven-plugin</artifactId>
                    <version>0.3.1</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>3.0.0-M4</version>
                    <configuration>
                        <forkCount>1.0C</forkCount>
                        <reuseForks>true</reuseForks>
                        <argLine>@{jacocoArgLine} -Xmx2G --illegal-access=permit</argLine>
                        <rerunFailingTestsCount>3</rerunFailingTestsCount>
                        <systemPropertyVariables>

                            <org.slf4j.simpleLogger.defaultLogLevel>WARN
                            </org.slf4j.simpleLogger.defaultLogLevel>
                            <org.slf4j.simpleLogger.showDateTime>true
                            </org.slf4j.simpleLogger.showDateTime>
                            <java.util.logging.config.file>logging.properties
                            </java.util.logging.config.file>
                        </systemPropertyVariables>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>

        <plugins>
            <plugin>
            <groupId>org.jacoco</groupId>
            <artifactId>jacoco-maven-plugin</artifactId>
            <executions>
                <execution>
                    <id>prepare-agent</id>
                    <goals>
                        <goal>prepare-agent</goal>
                    </goals>
                    <configuration>
                        <propertyName>jacocoArgLine</propertyName>
                        <includes>
                            <include>com.example.b.*</include>
                            <include>com.example.c.*</include>
                        </includes>
                    </configuration>
                </execution>
                <execution>
                    <id>coverage-report</id>
                    <phase>post-integration-test</phase>
                    <goals>
                        <goal>report</goal>
                    </goals>
                </execution>
            </executions>
        </plugin>
            <plugin>
                <groupId>com.github.surpsg</groupId>
                <artifactId>diff-coverage-maven-plugin</artifactId>
                <executions>
                    <execution>
                        <goals>
                            <goal>diffCoverage</goal>
                        </goals>
                        <configuration>
                            <!-- Required. diff content source. only one of file, URL or Git is allowed -->
                            <diffSource>
                                <git>origin/master</git>
                            </diffSource>



                            <!-- Optional -->
                            <violations>
                                <!-- Default 'false'. Fail build if violation rules weren't met  -->
                                <failOnViolation>true</failOnViolation>

                                <!-- Sets min coverage rule for: instructions, lines, branches -->
                                <!-- <minCoverage>0.8</minCoverage> -->

                                <!-- Each rule could be configured separately -->
                                <!-- Default '0.0'. If value is '0.0' then the rule is disabled -->
                                <!-- The percentage of lines to  be code coveraged -->
                                <minLines>.8</minLines>
                                <!-- The min percentage of branches that need to be covered -->
                                <minBranches>.8</minBranches>
                                <!-- byte code -->
                                <minInstructions>.8</minInstructions>
                            </violations>

                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

</project>
